	  interpreted as control key sequences. (DLR)
	- Tweak to more closely match get_unicode_kbinput(). (DLR)
  get_control_kbinput()
	- Add Ctrl-/ as an alias for Ctrl-_. (DLR, found by Benno
	  Schulenberg)
	- Simplify the if blocks wherever possible. (DLR)
  parse_verbatim_kbinput()
	- Don't include the ability to enter a Unicode sequence via
	  verbatim input mode if ENABLE_UTF8 isn't defined. (DLR)
  check_statusblank()
	- Avoid redundant updates when statusblank is 0. (DLR)
  display_string()
	- Properly display double-column characters if they're past the
	  first virtual page and their first column is covered by the
	  "$" displayed at the beginning of the line. (DLR)
  statusbar()
	- Blank the statusbar after 26 keystrokes instead of 25, for
	  conpatibility with Pico. (DLR)
  edit_draw()
	- Properly ignore zero-length regexes in multi-line regexes as
	  well as single-line ones.  This avoids a segfault when trying
	  to color e.g. "start="$" end="$"". (DLR, found by Trevor
	  Caira)
  edit_redraw()
	- Fix problem where not all lines would be updated properly if
	  we'd scrolled off the screen and the mark was on. (DLR)
  do_credits()
	- Update the last copyright notice to include 2006. (DLR)
- configure.ac:
	- Remove old warnings about color support. (DLR)
- doc/faq.html:
	- Add a new section 4.4, and move all section 4 entries after it
	  down one number, to explain how to deal with problems typing
	  Meta-[. (DLR)
	- Add a new section 4.5, and move all section 4 entries after it
	  down one number, to explain a problem that can occur when
	  holding down keys to generate Meta sequences. (Benno
	  Schulenberg, minor tweaks by DLR)
	- Add a few capitalization and wording fixes. (DLR)
	- Remove section 4.4, and move all section 4 entries after it up
	  one number, since it no longer applies.  Meta-] and Meta-[ are
	  no longer used to indent and unindent marked text, since they
	  require that the bracket matching key change to Ctrl-], which